src/reporter/format/snapshots/_oxitest__reporter__format__summary__tests__snapshot_tests__summary_all_failed.snap
---
source: src/reporter/format/summary.rs
expression: "fmt_summary(&stats, 0, false)"
---
════════════════════════════════════════════════════════════════════════════════
  8 failed
════════════════════════════════════════════════════════════════════════════════
