src/reporter/format/snapshots/_oxitest__reporter__format__summary__tests__snapshot_tests__summary_mixed_outcomes.snap
---
source: src/reporter/format/summary.rs
expression: "fmt_summary(&stats, 0, false)"
---
════════════════════════════════════════════════════════════════════════════════
  2 failed · 1 error · 10 passed · 3 skipped
════════════════════════════════════════════════════════════════════════════════
