src/reporter/format/snapshots/_oxitest__reporter__format__summary__tests__snapshot_tests__summary_no_tests_ran.snap
---
source: src/reporter/format/summary.rs
expression: "fmt_summary(&stats, 0, false)"
---
════════════════════════════════════════════════════════════════════════════════
  no tests ran
════════════════════════════════════════════════════════════════════════════════
