src/reporter/format/snapshots/_oxitest__reporter__format__summary__tests__snapshot_tests__summary_with_warnings_and_flaky.snap
---
source: src/reporter/format/summary.rs
expression: "fmt_summary(&stats, 0, false)"
---
════════════════════════════════════════════════════════════════════════════════
  15 passed · 2 warnings · 1 flaky
════════════════════════════════════════════════════════════════════════════════
