src/reporter/format/snapshots/_oxitest__reporter__format__summary__tests__snapshot_tests__summary_xfail_and_xpass.snap
---
source: src/reporter/format/summary.rs
expression: "fmt_summary(&stats, 0, false)"
---
════════════════════════════════════════════════════════════════════════════════
  1 xpassed · 3 passed · 2 xfailed
════════════════════════════════════════════════════════════════════════════════
